@@ -40,11 +40,24 @@
 				<drawimage condition="{current}++eq({coloredButtons}, 0)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="buttonFullActive" />
 			</area>
 <!--separators-->
-			<area condition="{separator}" x="1%" width="94%" transparency="{transLists}" layer="3">
+			<area condition="{separator}++not{fritzbox}" x="1%" width="94%" transparency="{transLists}" layer="3">
 				<drawimage x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="buttonFullSeparator" />
 			</area>
-			<area condition="{separator}" x="1%" width="94%" layer="4">
+			<area condition="{separator}++not{fritzbox}" x="1%" width="94%" layer="4">
 				<drawtext align="center" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{column1}" />
+			</area>
+<!--separators-fritzbox-Anrufdetails-->
+			<area condition="{separator}++{fritzbox}" x="1%" width="94%" transparency="{transLists}" layer="3">
+				<drawimage condition="not{current}" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="buttonLong1" />
+				<drawimage condition="{current}++eq({coloredButtons}, 2)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="buttonLongActive_Gradient" />
+				<drawimage condition="{current}++eq({coloredButtons}, 1)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="buttonLongActiveColor" />
+				<drawimage condition="{current}++eq({coloredButtons}, 0)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="buttonLongActive" />
+			</area>
+			<areascroll condition="{separator}++{fritzbox}" scrollelement="column1" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="5%" width="25%" layer="4">
+				<drawtext x="0" width="99%" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{column1}" />
+			</areascroll>
+			<area x="30%" condition="{separator}++{fritzbox}" width="62%" layer="4">
+				<drawtext align="right" valign="center" font="{light}" fontsize="70%" width="99%" color="{clrLightGray}" text="{column2}" />
 			</area>
 <!-- setup-->
 			<areascroll condition="not{separator}++{setup}++{column2set}" scrollelement="column1" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="3%" width="47%" layer="4">
